--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     
 <body>
     <h1 style="background-color:DodgerBlue;">Work Experience</h1>
- <p>Mcdonalds <br> computer Xpress <br> FutureGroup <br> Reliance Retail Limited <br> Now DHL Supply Chain
+ <p>Mcdonalds <br> Xpress Computer <br> FutureGroup <br> Reliance Retail Limited <br> Now DHL Supply Chain
  </p>
  
  <h1 style="background-color:rgb(255, 214, 30);">Qualification</h1>
  <p>BS.c From Allahabad State Unirversity in 2019 <br> HSC From UP Board in 2016 <br> SSC From UP Board in 2014</p> 
  <h1 style="background-color:rgb(30, 255, 75);">Certification</h1>  
- <p>JETKING CERTIFIED HARDWARE NETWORKING + CLOUD V2 <br>Training on Cisco Certified Network Associate ( CCNA ) from RST forum </p>
+ <p>JETKING CERTIFIED HARDWARE NETWORKING + CLOUD V2 <br>Training on Cisco Certified Network Associate  ( CCNA ) from RST forum </p>
  <h1 style="background-color:DodgerBlue;">Personal Details</h1>
  <p>Date of Birth: 28 August 1999 <br>
     Nationality: Indian <br>
-    Marital Status: Unmarriedbr <br>
+    Marital Status: Unmarried <br>
     Hobbies : Listening Naat Sharif <br>
     Languages: English / Hindi / Urdu</p>
     <h1 style="background-color:rgb(255, 30, 30);">Family Info.</h1>
