--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2 style="background-color:rgb(30, 255, 64);">Introduction</h2>
 <p> I am Mohd Saphik. from Allahabad City. Currently working as a Technical Support Engineer in DHL Supply Chain
     <br>
-    i want to become a Web Dovelper </p>
+    I want to become a Web Developer </p>
     <img src="WhatsApp Image 2022-11-24 at 18.41.42.jpeg" alt="Saif" width="200">
 <a href="https://www.linkedin.com/in/mohd-saphik-4b361a216/?original_referer=https%3A%2F%2Fwww%2Egoogle%2Ecom%2F&originalSubdomain=in"> Linkedin </a>
     
